WebCore/bindings/js/JSCanvasRenderingContext2DCustom.cpp
@@ -51,10 +51,8 @@ static JSValue toJS(ExecState* exec, CanvasStyle* style)
     return jsString(exec, style->color());
 }
 
-static PassRefPtr<CanvasStyle> toHTMLCanvasStyle(ExecState* exec, JSValue value)
+static PassRefPtr<CanvasStyle> toHTMLCanvasStyle(ExecState*, JSValue value)
 {
-    if (value.isString())
-        return CanvasStyle::create(ustringToString(asString(value)->value(exec)));
     if (!value.isObject())
         return 0;
     JSObject* object = asObject(value);
@@ -74,6 +72,10 @@ JSValue JSCanvasRenderingContext2D::strokeStyle(ExecState* exec) const
 void JSCanvasRenderingContext2D::setStrokeStyle(ExecState* exec, JSValue value)
 {
     CanvasRenderingContext2D* context = static_cast<CanvasRenderingContext2D*>(impl());
+    if (value.isString()) {
+        context->setStrokeColor(ustringToString(asString(value)->value(exec)));
+        return;
+    }
     context->setStrokeStyle(toHTMLCanvasStyle(exec, value));
 }
 
@@ -86,6 +88,10 @@ JSValue JSCanvasRenderingContext2D::fillStyle(ExecState* exec) const
 void JSCanvasRenderingContext2D::setFillStyle(ExecState* exec, JSValue value)
 {
     CanvasRenderingContext2D* context = static_cast<CanvasRenderingContext2D*>(impl());
+    if (value.isString()) {
+        context->setFillColor(ustringToString(asString(value)->value(exec)));
+        return;
+    }
     context->setFillStyle(toHTMLCanvasStyle(exec, value));
 }
 
