WebCore/html/canvas/CanvasRenderingContext2D.cpp
@@ -187,6 +187,7 @@ void CanvasRenderingContext2D::setStrokeStyle(PassRefPtr<CanvasStyle> style)
     if (!c)
         return;
     state().m_strokeStyle->applyStrokeColor(c);
+    state().m_unparsedStrokeColor = String();
 }
 
 CanvasStyle* CanvasRenderingContext2D::fillStyle() const
@@ -214,6 +215,7 @@ void CanvasRenderingContext2D::setFillStyle(PassRefPtr<CanvasStyle> style)
     if (!c)
         return;
     state().m_fillStyle->applyFillColor(c);
+    state().m_unparsedFillColor = String();
 }
 
 float CanvasRenderingContext2D::lineWidth() const
@@ -484,7 +486,10 @@ void CanvasRenderingContext2D::setTransform(float m11, float m12, float m21, flo
 
 void CanvasRenderingContext2D::setStrokeColor(const String& color)
 {
+    if (color == state().m_unparsedStrokeColor)
+        return;
     setStrokeStyle(CanvasStyle::create(color));
+    state().m_unparsedStrokeColor = color;
 }
 
 void CanvasRenderingContext2D::setStrokeColor(float grayLevel)
@@ -514,7 +519,10 @@ void CanvasRenderingContext2D::setStrokeColor(float c, float m, float y, float k
 
 void CanvasRenderingContext2D::setFillColor(const String& color)
 {
+    if (color == state().m_unparsedFillColor)
+        return;
     setFillStyle(CanvasStyle::create(color));
+    state().m_unparsedFillColor = color;
 }
 
 void CanvasRenderingContext2D::setFillColor(float grayLevel)
