WebCore/html/canvas/CanvasRenderingContext2D.h
@@ -214,6 +214,8 @@ namespace WebCore {
         struct State {
             State();
             
+            String m_unparsedStrokeColor;
+            String m_unparsedFillColor;
             RefPtr<CanvasStyle> m_strokeStyle;
             RefPtr<CanvasStyle> m_fillStyle;
             float m_lineWidth;
